--- a/blog/content/styles.css
+++ b/blog/content/styles.css
@@ -164,6 +164,12 @@ hr.tech{
 .pofile-container span {
     font-size: 1.6em;
 }
+.albumCoverImage{
+    background-color: #46b8da;
+    border-radius: 20px;
+    padding: 30px;
+
+}
 .userInfo {
     font-size: 1.8em;
 }
@@ -225,4 +231,27 @@ background: none;
     min-width: 75%;
     min-height: 50%;
 
+}
+.fileUpload {
+    position: relative;
+    overflow: hidden;
+    margin: 10px;
+}
+.fileUpload input.upload {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
+.profileInfo{
+    overflow: auto;
+}
+.albumCover{
+    width: 100%;
+    height:100%;
 }
