--- a/blog/content/styles.css
+++ b/blog/content/styles.css
@@ -2,6 +2,13 @@ body>header {
     background: #eee;
     padding: 5px;
 }
+body {
+    color: white;
+    background-color: #18A7B7; ;
+}
+main{
+
+}
 body>header>a>img, body>header a  {
     display: inline-block;
     vertical-align: middle;
@@ -143,10 +150,11 @@ hr.tech{
     display: block;
     margin: 0px;
     width: 100%;
+    border: 0;
 }
 
 .pofile-container{
-    background-color: #46b8da;
+    background-color: #F16623;
     width    : 50%;
     height   : 50%;
     left     : 30%;
@@ -154,7 +162,10 @@ hr.tech{
     padding: 30px;
     border-radius: 20px;
     margin-left : -100px; /* half of the width  */
-    margin-top  : -100px; /* half of the height */
+    margin-top  : 30px;
+}
+.modal-content{
+    background-color: #F16623;
 }
 .profilePicture{
     width: 80%;
@@ -165,9 +176,10 @@ hr.tech{
     font-size: 1.6em;
 }
 .albumCoverImage{
-    background-color: #46b8da;
+    background-color: #F16623;
     border-radius: 20px;
     padding: 30px;
+    height: 75%;
 
 }
 .userInfo {
@@ -252,6 +264,171 @@ background: none;
     overflow: auto;
 }
 .albumCover{
+    width: 75%;
+    height:75%;
+}
+.addImagemodal
+{
+    background-color: #5bc0de;
+    opacity: 0.6;
     width: 100%;
     height:100%;
+}
+.addImageForm{
+    position: absolute;
+    top: 40% ;
+    left: 25% ;
+    background-color: white;
+   padding: 2%;
+    border-radius: 20px;
+}
+.albumImageContainer{
+    background-color: #F16623;
+   padding: 2%;
+}
+.albumIMg
+{
+    width: 100%;
+    height: 100%;
+}
+.tashak
+{
+    background-image: url("images/blog_images/images.png");
+}
+.headerHome a{
+color: white;
+}
+.topNav{
+    background-color: #F16623;
+    color: white;
+}
+.topNav a{
+
+    color: white;
+}
+.orange-el{
+    color:white ;
+    background-color: #F16623;
+}
+.blue-el{
+    color:#F16623 ;
+    background-color: #18A7B7;
+}
+.navbar-inverse .navbar-nav>li>a{
+    color: white;
+}
+.navbar-inverse .navbar-nav>li>a:hover{
+    color: white;
+    background:#18A7B7 ;
+}
+.active{
+    background-color: #18A7B7;
+}
+.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover{
+    background-color: #18A7B7;
+}
+.home span{
+    color: white;
+}
+hr.tech {
+    background-color: #F16623; ;
+}
+body > aside {
+    float: right;
+    width: 200px;
+    background: #F16623;
+    padding: 15px;
+    margin-left: 20px;
+}
+.btn {
+    background-color:  #18A7B7;
+}
+footer{
+    color:#18A7B7 ;
+}
+.hello a:hover {
+    background-color:  #18A7B7;
+    opacity: 0.6;
+}
+.topNav a:hover {
+    background-color: #18A7B7;
+    opacity: 0.6;;
+}
+.post-elemnts {
+    margin: 5px;
+    background-color: #18A7B7;
+    border-radius: 25px;
+}
+.post-container{
+    background: #F16623;
+    margin-bottom: 15px;
+    display: flex;
+    padding: 5px;
+    border-radius: 25px;
+}
+
+
+
+.post-link{
+    color: white;
+}
+.post-link :hover{
+    background: #18A7B7;
+    opacity: 0.6;
+}
+.post-create{
+
+    border-radius: 20%;
+    background-image: url("images/blog_images/header.png");
+    background-repeat: no-repeat;
+    background-size:cover;
+    margin-left: 30%;
+    padding: 10px;
+}
+.post-create.view{
+    color: black;
+    border-radius: 75px;
+    background-image: url("images/blog_images/header.png");
+    background-repeat: no-repeat;
+    background-size:cover;
+    margin-left: 30%;
+    padding: 10px;
+    min-height: 30%;
+}
+@media only screen and (min-device-width: 768px) {
+    .post-create  {
+
+        border-radius: 75px;
+    }
+}
+.post-form{
+    color:#18A7B7 ;
+    margin-left: 30%;
+}
+.post-form textarea {
+    width: 70%;
+}
+.post-form  text{
+    width: 70%;
+}
+.post-form  sub{
+    width: 70%;
+}
+.submit-post{
+    color: white;
+    background:#18A7B7 ;
+}
+@media only screen and (max-device-width: 768px) {
+    .navbar-brand  {
+
+        display: none;
+    }
+    .post-create{
+        width: 90%;
+        height: 100%;
+        margin: 0%;
+    }
+}
+.reg_form{
+    color: black;
 }
